; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtlstr.c_test_RtlCopyString.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtlstr.c_test_RtlCopyString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@test_RtlCopyString.teststring = internal constant [17 x i8] c"Some Wild String\00", align 16
@__const.test_RtlCopyString.deststring = private unnamed_addr constant [21 x i8] c"                    \00", align 16
@.str = private unnamed_addr constant [19 x i8] c"String not copied\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_RtlCopyString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_RtlCopyString() #0 {
  %1 = alloca [21 x i8], align 16
  %2 = alloca %struct.TYPE_5__, align 4
  %3 = alloca %struct.TYPE_5__, align 4
  %4 = bitcast [21 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([21 x i8], [21 x i8]* @__const.test_RtlCopyString.deststring, i32 0, i32 0), i64 21, i1 false)
  %5 = call i32 @pRtlInitString(%struct.TYPE_5__* %2, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @test_RtlCopyString.teststring, i64 0, i64 0))
  %6 = getelementptr inbounds [21 x i8], [21 x i8]* %1, i64 0, i64 0
  %7 = call i32 @pRtlInitString(%struct.TYPE_5__* %3, i8* %6)
  %8 = call i32 @pRtlCopyString(%struct.TYPE_5__* %3, %struct.TYPE_5__* %2)
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = getelementptr inbounds [21 x i8], [21 x i8]* %1, i64 0, i64 0
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @strncmp(i32 %10, i8* %11, i32 %13)
  %15 = icmp eq i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @ok(i32 %16, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @pRtlInitString(%struct.TYPE_5__*, i8*) #2

declare dso_local i32 @pRtlCopyString(%struct.TYPE_5__*, %struct.TYPE_5__*) #2

declare dso_local i32 @ok(i32, i8*) #2

declare dso_local i64 @strncmp(i32, i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
